# scena

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  package-lock.json  package.json
.claude/agents/: scena-api-ergonomics-reviewer.md  scena-doctor-reviewer.md  scena-gltf-animation-reviewer.md  scena-rfc-reviewer.md  scena-visual-quality-validator.md  scena-wgpu-architect.md
.codex/skills/scena-doctor/: SKILL.md
.codex/skills/scena-git-github/: SKILL.md
.codex/skills/scena-gltf-assets/: SKILL.md
.codex/skills/scena-release-hygiene/: SKILL.md
.codex/skills/scena-renderer-architecture/: SKILL.md
.codex/skills/scena-renderer-quality/: SKILL.md
.codex/skills/scena-rfc-governance/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/xtask/: Cargo.toml
crates/xtask/src/: app.rs  main.rs
demo/: _headers  index.html  main.js
demo/samples/: SOURCES.md
demo/samples/connector-snap/: connector_snap_assembly.glb  drive_unit.glb  load_unit.glb
demo/samples/environment/: white_studio_03_1k.hdr
docs/: README.md  api.md  assets.md  browser.md  capabilities.md  errors.md  examples.md  feature-flags.md  getting-started.md  headless-rendering.md  lifecycle.md  platforms.md  rendering.md  troubleshooting.md
docs/checklists/: damaged-helmet-hole-root-cause.md  easy-scene-setup-and-auto-framing.md  eliminate-handmade-rendering.md  next-release-easy-use-and-state-of-the-art.md  public-demo-showcase.md  state-of-the-art-demo-materials-and-performance.md  trust-platform-digital-twin-webgl-investigation.md  trust-platform-finding-2-webgl-materials.md
docs/decisions/: ADR-0001-webgl2-camera-uniform-precision-mismatch.md  ADR-0002-eliminate-handmade-rendering.md
docs/guides/: authoring-gltf-anchors-connectors.md  easy-scene-setup.md  migrating-from-threejs.md  place-and-connect-objects.md  troubleshooting-misplaced-assets.md  units-axes-handedness.md
docs/release-notes/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.1.0.md  v1.2.0.md  v1.3.0.md
examples/: anchor_alignment.rs  animation.rs  beginner_diagnostics.rs  browser_canvas.rs  camera_framing.rs  connect_objects.rs  connector_auto_framing.rs  connector_snap_hero.rs  coordinate_connector_repair.rs  coordinate_units.rs  easy_model_viewer.rs  first_visible_render.rs  glb_model_viewer.rs  headless_ci.rs  imported_anchor_connection.rs  industrial_connector_assembly.rs  industrial_static_scene.rs  instancing.rs  labels_helpers.rs  layers_visibility.rs  mate_two_parts.rs  native_window.rs  orbit_controls.rs  orbit_controls_browser_adapter.rs  orbit_controls_native_adapter.rs  picking_selection_hover.rs  primitive_shapes.rs  scene_inspection.rs  static_batching.rs
scripts/: apply_connector_demo_palette.js  apply_connector_material_textures.js  build_demo_wasm.js  generate_connector_demo_assets.js  generate_connector_demo_assets_blender.py  local_release_gallery.py  local_release_readiness.sh  probe_cloudflare_demo.js  release_lane_command.sh  release_publish_dry_run.sh  render_connector_snap_hero_gif.sh
src/: animation.rs  assets.rs  browser_probe.rs  controls.rs  demo_page.rs  diagnostics.rs  geometry.rs  lib.rs  material.rs  picking.rs  platform.rs  render.rs  scene.rs  viewer.rs
src/animation/: sampling.rs
src/assets/: environment.rs  environment_projection.rs  fetch.rs  gc.rs  gltf.rs  load.rs  obj.rs  scene_loading.rs  texture.rs  texture_ktx2.rs  texture_source.rs
src/assets/gltf/: accessor.rs  anchors.rs  animation.rs  buffers.rs  connectors.rs  extensions.rs  external.rs  glb.rs  lights.rs  material_variants.rs  materials.rs  meshes.rs  meshopt.rs  read.rs  scene_asset.rs  skins.rs  textures.rs  transform.rs
src/browser_probe/: probes.rs  report.rs  workflows.rs
src/browser_probe/probes/: state_lifecycle.rs
src/browser_probe/workflows/: ergonomics.rs  pbr.rs
src/demo_page/: bounds.rs  connectors.rs  floor.rs  imports.rs  replay.rs
src/diagnostics/: browser_timing.rs  capabilities.rs  diagnostic.rs  display.rs  help.rs
src/geometry/: bounds.rs  helpers.rs  morph.rs  primitive.rs  skinning.rs  static_batch.rs  tangents.rs
src/render/: build.rs  camera.rs  color_contract.rs  cpu.rs  culling.rs  environment_cache.rs  exposure.rs  gpu.rs  offscreen.rs  output.rs  prepare.rs  prepare_lifecycle.rs  reporting.rs  settings.rs  surface.rs
src/render/gpu/: browser_exposure.rs  browser_readback.rs  build.rs  culling.rs  debug.rs  depth.rs  draw.rs  draw_uniform.rs  environment.rs  lifecycle.rs  material_batched.rs  material_mips.rs  (+19 more)
src/scene/: anchors.rs  builders.rs  camera.rs  camera_controls.rs  clipping.rs  connectors.rs  dirty.rs  framing.rs  import.rs  inspection.rs  instances.rs  labels.rs  lights.rs  materials.rs  math.rs  mixers.rs  morphs.rs  origin.rs  picking.rs  render_nodes.rs  skinning.rs  transforms.rs  view.rs  view_math.rs  visibility.rs
tests/: connector_material_audit.rs  easy_scene_setup_framing.rs  examples_visual_proof.rs  first_render_api.rs  framing_views.rs  m0_foundation.rs  m1_browser_rendered_output.rs  m1_geometry_materials.rs  m1_visual_proof.rs  m2_lighting_depth_clipping.rs  m2_visual_proof.rs  m3a_app_features.rs  m3a_browser_rendered_output.rs  m3a_visual_proof.rs  m3b_browser_rendered_output.rs  m3b_gltf_animation.rs  m3b_visual_proof.rs  m4_performance_platform.rs  m5_release.rs  m6_browser_renderer_parity.rs  m7_interactive_viewer.rs  m7_threejs_ergonomics.rs  m7_visual_proof.rs  m8_assets_materials_ecosystem.rs  m8_compressed_asset_release_proof.rs  m8_hdr_rle.rs  m8_material_variants_runtime.rs  m8_real_asset_proof.rs  m8_stale_handle_proof.rs  m8_visual_proof.rs  m9_platform_release.rs  trust_platform_repro.rs
tests/browser/: m0_browser_surface_smoke.html  m0_browser_surface_smoke.js  m2_browser_lighting_clipping_smoke.html  m2_browser_lighting_clipping_smoke.js  m4_platform_smoke.html  m4_platform_smoke.js  m6_rust_wasm_renderer_probe.html  m6_rust_wasm_renderer_probe.js  m6_rust_wasm_renderer_probe_page.js
tests/fixtures/: m9-baselines.json
tests/release/: m9_wasm_size_gate.js
(+153 files in other folders)
