[package]
name = "scena"
version = "1.0.0-rc.0"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
authors = ["Johannes Pettersson <johannes_salomon@hotmail.com>"]
repository = "https://github.com/johannesPettersson80/scena"
description = "A Rust-native scene-graph renderer with typed scene state, glTF assets, and explicit prepare/render lifecycles."
readme = "README.md"
documentation = "https://docs.rs/scena"
keywords = ["renderer", "scene-graph", "gltf", "webgpu", "wasm"]
categories = ["graphics", "rendering", "wasm"]
include = [
    "src/**",
    "tests/**",
    "examples/**",
    "docs/**",
    "docs/api/m5-semver-baseline.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-*",
    "Cargo.toml",
    "Cargo.lock",
]

[workspace]
members = [".", "crates/xtask"]
resolver = "3"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[example]]
name = "scene_inspection"
path = "examples/scene_inspection.rs"
required-features = ["inspection"]

[dependencies]
base64 = "0.22"
glam = { version = "0.30", default-features = false, features = ["std", "scalar-math"] }
gltf = { version = "1.4", default-features = false, features = ["utils", "names", "extras", "extensions", "image", "import", "KHR_lights_punctual", "KHR_materials_unlit", "KHR_materials_emissive_strength", "KHR_texture_transform", "KHR_materials_variants"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
mikktspace = "0.3"
png = "0.17"
radiant = "0.3"
raw-window-handle = "0.6.2"
serde_json = "1"
slotmap = "1.0"
wgpu = { version = "29.0.3", features = ["webgl"] }

[features]
default = []
controls = []
controls-winit = ["controls"]
controls-web = ["controls"]
browser-probe = []
inspection = []
ktx2 = []
obj = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.82"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.82", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "ImageData",
    "Response",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "console",
    "Window",
] }

[dev-dependencies]
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
